dropshot/tests/fail/bad_trait_only19.stderr
error: endpoint `bad_endpoint` must not specify `_dropshot_crate`
       note: specify this as an argument to `#[server]` instead
  --> tests/fail/bad_trait_only19.rs:16:5
   |
16 |     #[endpoint { method = GET, path = "/test", _dropshot_crate = "dropshot" }]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
